--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
 
     <div class="buttons">
 
-        <button onclick="onChangeLevel(4, 2)">Easy</button>
-        <button onclick="onChangeLevel(8,12)">medium</button>
-        <button onclick="onChangeLevel(12,25)">Extreme</button>
+        <button class="btn" onclick="onChangeLevel(4, 2)">Easy</button>
+        <button class="btn" onclick="onChangeLevel(8,12)">medium</button>
+        <button class="btn" onclick="onChangeLevel(12,25)">Extreme</button>
     </div>
         
+    <div class="smiley" onclick="onInitGame()">
+        <h2></h2>
+    </div>
+
     <div class="timer">
         <h2>000⏳</h2>
+    </div>
+
+    <div class="lives">
+        <h2>🤍🤍🤍</h2>
     </div>
 
     <table >
