--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <h2>🤍🤍🤍</h2>
     </div>
 
+    <div class="modal">
+        <h2></h2>
+        <button class="btn" onclick="onInitGame()">Play Again</button>
+    </div>
+
     <table >
         <tbody class="board"></tbody>
     </table>
