--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="buttons">
         <button class="btn" onclick="onChangeLevel(4, 2)">Easy</button>
-        <button class="btn" onclick="onChangeLevel(8,14)">medium</button>
+        <button class="btn" onclick="onChangeLevel(8,14)">Medium</button>
         <button class="btn" onclick="onChangeLevel(12,32)">Extreme</button>
     </div>
     
